added fancy cursor

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 <body>
   <div class="scanline"></div>
+  
   <div id="blur"></div>
   <main id="main">
     <div id="bars">
@@ -48,9 +49,12 @@
       </div>
       <br>
     </div>
+    
   </main>
+  
 </body>
 
 <script type="module" src="./src/main.ts"></script>
-
+<span id="circle" class="circle"></span>
+<span id="circle2" class="circle2"></span>
 </html>
