moved all assets to public

--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="src/css/css-reset.css">
   <link rel="stylesheet" href="src/css/style.css">
-  <link rel="icon" type="image/x-png" href="/res/terminal-solid.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1" />
   <script src="https://kit.fontawesome.com/d5effce557.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script>
     function playSound() {
-        var sound = new Audio("/res/type_tone.mp3");
+        var sound = new Audio("/public/assets/type_tone.mp3");
         sound.play();
     }
     function hideTerminal() {
