changed css hierarchy in index.html file

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="public/css/css-reset.css">
-  <link rel="stylesheet" href="public/css/style.css">
+  <link rel="stylesheet" href="/css/css-reset.css">
+  <link rel="stylesheet" href="/css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1" />
   <script src="https://kit.fontawesome.com/d5effce557.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
