changed path and added new dist

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script>
     function playSound() {
-        var sound = new Audio("/public/assets/type_tone.mp3");
+        var sound = new Audio("./assets/type_tone.mp3");
         sound.play();
     }
     function hideTerminal() {
