--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   
 </body>
 
-<script type="module" src="./src/main.ts"></script>
+<script type="module" src="/public/main.ts"></script>
 <span id="circle" class="circle"></span>
 <span id="circle2" class="circle2"></span>
 </html>
