--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <script type="module" src="./src/main.ts"></script>
   <link rel="stylesheet" href="./css/css-reset.css">
   <link rel="stylesheet" href="./css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1" />
@@ -52,8 +53,6 @@
   </main>
   
 </body>
-
-<script type="module" src="/main.ts"></script>
 <span id="circle" class="circle"></span>
 <span id="circle2" class="circle2"></span>
 </html>
